main.css
@import url('https://fonts.googleapis.com/css?family=Montserrat');
h1 {
  text-shadow: 3px 3px 4px rgba(0,0,0,0.63);
  font-weight: 300;
  font-family: 'Montserrat', sans-serif;
}
h2 {
  text-decoration: underline;
  font-family: 'Montserrat', sans-serif;
}
body {
  font-family: 'Montserrat', sans-serif;
  background: linear-gradient(35deg, #646E77, #9FACB8);
}
.ProfileImage {
  position: static;
  margin: auto;
  margin-left: 5%;
  margin-top: 5%;
  margin-bottom: 5%;
  width: 250px;
  height: 250px;
  border-color: black;
  border-width: 4px;
  border-style: solid;
  border-radius: 50%;
  float: left;
}
.Links {
  position: static;
  margin: auto;
  margin-left: 5%;
  width: 50px;
  height: 50px;
  border-color: black;
  border-width: 2px;
  border-style: solid;
  border-radius: 50%;
}
.PermLinks {
  position: static;
  margin: auto;
  margin-left: 10%;
  width: 20px;
  height: 20px;
  border-color: black;
  border-width: 1px;
  border-style: solid;
  border-radius: 50%;
}
header {
  background: linear-gradient(35deg, #797E83, #BCC7D1);
  color: hsl(0, 0%, 86%);
  box-shadow: 4px 8px 7px #888888;
  font-family: 'Montserrat', sans-serif;
}
nav {
  background-color: hsl(0, 0%, 50%);
}
#headerName {
  text-indent: 10px;
  padding-top: 10px;
}
nav ul {
  margin: 0px;
  padding: 5px 0px 5px 30px;
}
nav li {
  display: inline;
  margin-right: 20px;
}
a {
  text-decoration: none;
  color: inherit;
}
.MPList {
  margin: auto;
  margin-top: 5%;
  margin-bottom: 5%;
}
.Media {
  color: hsl(233, 72%, 37%);
}
.Media:hover {
  color: hsl(50, 72%, 49%);
}
.Media:active {
  color: Black;
}
ul,ol,p {
  font-size: 1.5rem;
}
li,p {
  line-height: 1.5;
}
.Description {
  font-size: 1rem;
  margin-top: 5%;
  margin-bottom: 5%;
}

